# GetSIDIS

./: .gitignore  GetSIDIS  GetSIDIS.C  GetSIDIS.h  README.md  SIDIS.h  generate_weight.C  sourcehere.sh
CTEQ6/: Cteq6Demo.f  Cteq6Pdf-2010.f
CTEQ6/cteq-pdf-1.0.4/: ._configure.ac  Cteq6Pdf-2008.txt  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/: Makefile  Makefile.am  Makefile.in
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/cteq6/: Makefile  Makefile.am  Makefile.in  cteq6sa.pds  cteq6sb+.pds
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/cteq61/: Makefile  Makefile.am  Makefile.in  ctq61.02.tbl  ctq61.04.tbl  ctq61.05.tbl  ctq61.06.tbl  ctq61.07.tbl  ctq61.09.tbl  ctq61.12.tbl  ctq61.13.tbl  ctq61.14.tbl  ctq61.16.tbl  ctq61.17.tbl  ctq61.18.tbl  ctq61.20.tbl  ctq61.21.tbl  ctq61.23.tbl  ctq61.24.tbl  ctq61.25.tbl  ctq61.26.tbl  ctq61.29.tbl  ctq61.30.tbl  ctq61.31.tbl  ctq61.33.tbl  ctq61.36.tbl  ctq61.40.tbl
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/cteq6m/: Makefile  Makefile.am  Makefile.in  cteq6m102.tbl  cteq6m103.tbl  cteq6m104.tbl  cteq6m106.tbl  cteq6m107.tbl  cteq6m108.tbl  cteq6m109.tbl  cteq6m113.tbl  cteq6m115.tbl  cteq6m116.tbl  cteq6m117.tbl  cteq6m119.tbl  cteq6m120.tbl  cteq6m122.tbl  cteq6m123.tbl  cteq6m124.tbl  cteq6m129.tbl  cteq6m130.tbl  cteq6m131.tbl  cteq6m132.tbl  cteq6m133.tbl  cteq6m135.tbl  cteq6m138.tbl  cteq6m139.tbl
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/cteq6std/: Makefile  Makefile.am  Makefile.in
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/ctq65-pds/: Makefile.in  ctq65.01.pds  ctq65.05.pds  ctq65.13.pds  ctq65.14.pds  ctq65.15.pds  ctq65.16.pds  ctq65.18.pds  ctq65.20.pds  ctq65.22.pds  ctq65.23.pds  ctq65.24.pds  ctq65.25.pds  ctq65.26.pds  ctq65.27.pds  ctq65.28.pds  ctq65.29.pds  ctq65.34.pds  ctq65.37.pds  ctq65.40.pds
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/ctq65c/: Makefile.in  ctq65.c0.pds  ctq65.c1.pds  ctq65.c3.pds  ctq65.c6.pds
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/ctq65s/: Makefile.in  ctq65.s+1.pds  ctq65.s+3.pds  ctq65.s-1.pds  ctq65.s-2.pds
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/ctq66a/: Makefile.in
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/ctq66c/: Makefile.in  ctq66.c3.pds
CTEQ6/cteq-pdf-1.0.4/cteq-tbls/ctq66m/: Makefile.in
CTEQ6/cteq-pdf-1.0.4/share/cteq-pdf/cteq6/: cteq6sb-.pds  cteq6sb.pds  cteq6sc.pds
CTEQ6/cteq-pdf-1.0.4/share/cteq-pdf/cteq61/: ctq61.01.tbl  ctq61.03.tbl  ctq61.08.tbl  ctq61.10.tbl  ctq61.11.tbl  ctq61.15.tbl  ctq61.19.tbl  ctq61.22.tbl  ctq61.27.tbl  ctq61.28.tbl  ctq61.32.tbl  ctq61.34.tbl  ctq61.35.tbl  ctq61.37.tbl  ctq61.38.tbl  ctq61.39.tbl
CTEQ6/cteq-pdf-1.0.4/src/: ._Makefile.am  Makefile  Makefile.am  Makefile.in  libcteqpdf.la  libcteqpdf_la-cteq-database.lo  libcteqpdf_la-cteqpdf-f77.lo  libcteqpdf_la-cteqpdf.lo
CTEQ6/cteq-pdf-1.0.4/src/.deps/: libcteqpdf_la-cteq-database.Plo  libcteqpdf_la-cteqpdf-f77.Plo  libcteqpdf_la-cteqpdf.Plo
CTEQ6/cteq-pdf-1.0.4/src/.libs/: libcteqpdf.la  libcteqpdf.lai
(+311 files in other folders)
