AUTOMAKE_OPTIONS = foreign

datadir=@datadir@/cteq-pdf/cteq61

dist_data_DATA = ctq61.08.tbl ctq61.17.tbl ctq61.26.tbl ctq61.35.tbl \
ctq61.00.tbl ctq61.09.tbl ctq61.18.tbl ctq61.27.tbl ctq61.36.tbl \
ctq61.01.tbl ctq61.10.tbl ctq61.19.tbl ctq61.28.tbl ctq61.37.tbl \
ctq61.02.tbl ctq61.11.tbl ctq61.20.tbl ctq61.29.tbl ctq61.38.tbl \
ctq61.03.tbl ctq61.12.tbl ctq61.21.tbl ctq61.30.tbl ctq61.39.tbl \
ctq61.04.tbl ctq61.13.tbl ctq61.22.tbl ctq61.31.tbl ctq61.40.tbl \
ctq61.05.tbl ctq61.14.tbl ctq61.23.tbl ctq61.32.tbl ctq61.06.tbl \
ctq61.15.tbl ctq61.24.tbl ctq61.33.tbl ctq61.07.tbl ctq61.16.tbl \
ctq61.25.tbl ctq61.34.tbl
