AUTOMAKE_OPTIONS = foreign

datadir=@datadir@/cteq-pdf/cteq6m

dist_data_DATA = cteq6m108.tbl cteq6m117.tbl cteq6m126.tbl cteq6m135.tbl \
cteq6m100.tbl cteq6m109.tbl cteq6m118.tbl cteq6m127.tbl cteq6m136.tbl \
cteq6m101.tbl cteq6m110.tbl cteq6m119.tbl cteq6m128.tbl cteq6m137.tbl \
cteq6m102.tbl cteq6m111.tbl cteq6m120.tbl cteq6m129.tbl cteq6m138.tbl \
cteq6m103.tbl cteq6m112.tbl cteq6m121.tbl cteq6m130.tbl cteq6m139.tbl \
cteq6m104.tbl cteq6m113.tbl cteq6m122.tbl cteq6m131.tbl cteq6m140.tbl \
cteq6m105.tbl cteq6m114.tbl cteq6m123.tbl cteq6m132.tbl cteq6m106.tbl \
cteq6m115.tbl cteq6m124.tbl cteq6m133.tbl cteq6m107.tbl cteq6m116.tbl \
cteq6m125.tbl cteq6m134.tbl